--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=mototrack-backend-rest-java
 
-spring.datasource.url=jdbc:postgresql://mototrackdbserver.postgres.database.azure.com:5432/mototrack
-spring.datasource.username=adminuser
-spring.datasource.password=MotoTrack123!
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=none
